<resources>
    <string name="app_name">SimpleCalc</string>

    <!-- activity_main -->
    <string name="edit_hint">Digite um número</string>
    <string name="image_sum">Botão de soma</string>
    <string name="image_div">Botão de divisão</string>
    <string name="image_sub">Botão de subtração</string>
    <string name="image_mult">Botão de multiplicação</string>
    <string name="text_result">Resultado</string>
    <string name="toast_sum">Informar os números para somar</string>
    <string name="toast_sub">Informar os números para subtrair</string>
    <string name="toast_div">Informar os números para dividir</string>
    <string name="toast_mult">Informar os números para multiplicar</string>
    <string name="button_clear">c</string>
</resources>