<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_first_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_margin_start"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:layout_marginEnd="@dimen/edit_margin_end"
        android:layout_marginBottom="12dp"
        android:autofillHints="@null"
        android:hint="@string/edit_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_second_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_margin_start"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:layout_marginEnd="@dimen/edit_margin_end"
        android:autofillHints="@null"
        android:hint="@string/edit_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/edit_first_number"
        app:layout_constraintStart_toStartOf="@+id/edit_first_number"
        app:layout_constraintTop_toBottomOf="@+id/edit_first_number" />

    <ImageView
        android:id="@+id/image_sum"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_rounded"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:contentDescription="@string/image_sum"
        android:src="@drawable/ic_baseline_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_second_number" />

    <ImageView
        android:id="@+id/image_div"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_rounded"
        android:backgroundTint="@color/ic_div_background"
        android:contentDescription="@string/image_div"
        android:src="@drawable/ic_baseline_div"
        app:layout_constraintEnd_toEndOf="@+id/image_sum"
        app:layout_constraintStart_toStartOf="@+id/image_sum"
        app:layout_constraintTop_toBottomOf="@+id/image_sum" />

    <ImageView
        android:id="@+id/image_sub"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/image_rounded"
        android:backgroundTint="@android:color/holo_red_dark"
        android:contentDescription="@string/image_sub"
        android:src="@drawable/ic_baseline_sub"
        app:layout_constraintBottom_toBottomOf="@+id/image_sum"
        app:layout_constraintStart_toEndOf="@+id/image_sum"
        app:layout_constraintTop_toTopOf="@+id/image_sum" />

    <ImageView
        android:id="@+id/image_mult"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_rounded"
        android:backgroundTint="@android:color/holo_orange_light"
        android:contentDescription="@string/image_mult"
        android:src="@drawable/ic_baseline_mult"
        app:layout_constraintStart_toEndOf="@+id/image_div"
        app:layout_constraintTop_toBottomOf="@+id/image_sub" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/text_result"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_div" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear"
        android:background="@drawable/image_rounded"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/image_mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_sub"
        app:layout_constraintTop_toTopOf="@+id/image_sub" />

</androidx.constraintlayout.widget.ConstraintLayout>